# tgl-old

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/bubbles/: main.cpp
examples/rectangle/: main.cpp
examples/redline/: main.cpp
src/: tgl.cpp  tgl.h
src/colors/: tgl_colors.cpp  tgl_colors.h
src/ds/: matspan.h
src/internal/: internal.cpp  internal.h
test/: main.cpp
